# Resgen

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  it.json  package.nix  resume.json  shell.nix  temp.json
examples/: it.toml
src/: cli.rs  main.rs  setup.rs  templates.rs  user.rs
src/temps/: clean.rs  default.rs  line.rs  mod.rs  template.rs
