[package]
name = "resgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["cargo"] }
colored = "3.0.0"
genpdf = { version = "0.2.0", features = ["hyphenation"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
