[package]
name = "resgen"
version = "0.2.0"
edition = "2021"
authors = ["Marwan Mohamed <merolokamino@gmail.com>"]
description = "CLI tool for generating PDF resumes from JSON"
license = "BSD 2-Clause"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["cargo"] }
colored = "3.0.0"
fontconfig = "0.9.0"
genpdf = "0.2.0" 
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tempfile = "3.19.1"
toml = "0.8.20"
